@@ -76,21 +76,22 @@ public:
 		CHANCE_EXEC = 42,
 		RESPEC = 43,
 		SHOW_ON_MINIMAP = 44,
-		NPC_ID = 45,
-		NPC_HOTSPOT = 46,
-		NPC_DIALOG_THEM = 47,
-		NPC_DIALOG_YOU = 48,
-		NPC_VOICE = 49,
-		NPC_DIALOG_TOPIC = 50,
-		NPC_DIALOG_GROUP = 51,
-		NPC_DIALOG_ID = 52,
-		NPC_DIALOG_RESPONSE = 53,
-		NPC_DIALOG_RESPONSE_ONLY = 54,
-		NPC_ALLOW_MOVEMENT = 55,
-		NPC_PORTRAIT_THEM = 56,
-		NPC_PORTRAIT_YOU = 57,
-		QUEST_TEXT = 58,
-		WAS_INSIDE_EVENT_AREA = 59
+		PARALLAX_LAYERS = 45,
+		NPC_ID = 46,
+		NPC_HOTSPOT = 47,
+		NPC_DIALOG_THEM = 48,
+		NPC_DIALOG_YOU = 49,
+		NPC_VOICE = 50,
+		NPC_DIALOG_TOPIC = 51,
+		NPC_DIALOG_GROUP = 52,
+		NPC_DIALOG_ID = 53,
+		NPC_DIALOG_RESPONSE = 54,
+		NPC_DIALOG_RESPONSE_ONLY = 55,
+		NPC_ALLOW_MOVEMENT = 56,
+		NPC_PORTRAIT_THEM = 57,
+		NPC_PORTRAIT_YOU = 58,
+		QUEST_TEXT = 59,
+		WAS_INSIDE_EVENT_AREA = 60
 	};
 
 	int type;
